--- a/API/src/config/config.json
+++ b/API/src/config/config.json
@@ -1,11 +1,21 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
+    "password": "123456789",
+    "database": "share_car",
+    "host": "localhost",
     "dialect": "mysql",
-    "logging": false
+    "logging": false,
+    "query": {
+      "raw": true
+    },
+    "timezone": "+07:00",
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   },
   "test": {
     "username": "root",
