--- a/API/src/config/config.json
+++ b/API/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "123456789",
+    "password": "password",
     "database": "share_car",
     "host": "localhost",
     "dialect": "mysql",
