--- a/API/.env
+++ b/API/.env
@@ -1,4 +1,5 @@
 PORT=8080
 NODE_ENV=development
+CLIENT_URL=http://127.0.0.1:5173
 JWT_ACCESS_KEY=skjhfdjsdhfkkjwer
 JWT_REFRESH_KEY=xclvhjklxcvhlkwefwef
