--- a/API/.env.example
+++ b/API/.env.example
@@ -1,4 +1,5 @@
-PORT=
-NODE_ENV=
-JWT_ACCESS_KEY=
-JWT_REFRESH_KEY=
+PORT=8080
+NODE_ENV=development
+CLIENT_URL=http://127.0.0.1:5173
+JWT_ACCESS_KEY=skjhfdjsdhfkkjwer
+JWT_REFRESH_KEY=xclvhjklxcvhlkwefwef
