--- a/API/package.json
+++ b/API/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/index"
+    "dev": "nodemon --exec babel-node src/index",
+    "start": "node --exec babel-node src/index"
   },
   "keywords": [],
   "author": "",
