--- a/API/package.json
+++ b/API/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec babel-node src/index",
-    "start": "node --exec babel-node src/index"
+    "start": "node src/index"
   },
   "keywords": [],
   "author": "",
