--- a/API/package.json
+++ b/API/package.json
@@ -1,34 +1,38 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "",
+  "engines": {
+    "node": "17.2.0"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node src/index",
-    "start": "node src/index"
+    "dev": "nodemon --exec babel-node index",
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
     "@babel/core": "^7.20.2",
     "@babel/node": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
-    "nodemon": "^2.0.20",
-    "sequelize": "^6.25.8"
-  },
-  "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ejs": "~2.6.1",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "pg": "^8.8.0",
+    "sequelize": "^6.25.8",
     "sequelize-cli": "^6.5.2"
   }
 }
